--- a/monkey_styles.css
+++ b/monkey_styles.css
@@ -48,11 +48,11 @@ img {
 .twoof3{
 	background-color:blue;
 }
-	
 .threeof3{
 	background-color:red;
 }
-	
+
+/* styles for the models */
 body { font-size: 62.5%; }
 label, input { display:block; }
 input.text { margin-bottom:12px; width:95%; padding: .4em; }
