made monkey smaller

--- a/monkey_styles.css
+++ b/monkey_styles.css
@@ -36,7 +36,11 @@ img.display
 div.hidden{
 	visibility:hidden;
 }
-	
+#monkey{
+	visibility:visible;
+	width:100px;
+	height:100px;
+}	
 img {
 	max-width:100%;
 }
